--- a/src/index.css
+++ b/src/index.css
@@ -292,104 +292,47 @@ p {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
 }
-.product {
-  background: var(--clr-white);
-  border-radius: var(--radius);
-}
-.product img {
-  border-top-left-radius: var(--radius);
-  border-top-right-radius: var(--radius);
-  width: 100%;
-  height: 15rem;
-  object-fit: cover;
-}
-.product h4 {
-  margin-top: 1rem;
-}
 
-.section {
+.container {
+  display: grid;
+  grid-template-columns: 250px 1fr;
   width: 90vw;
   margin: 5rem auto;
-  max-width: 1170px;
+  background: #db890e;
+  border-radius: .25rem;
+  padding: 2.5rem 2rem;
+  max-width: 920px;
+  grid-gap: 1rem 2rem;
 }
-.title {
-  margin-bottom: 4rem;
-  text-align: center;
+.question {
+  padding: 1rem 1.5rem;
+  border: 2px solid #eae6eb;
+  margin-bottom: 1rem;
+  border-radius: .25rem;
+  box-shadow: 0 5px 15px rgba(0,0,0,.1);
 }
-.underline {
-  width: 5rem;
-  height: .25rem;
-  margin-bottom: 1.25rem;
-  background: #2caeba;
-  margin-left: auto;
-  margin-right: auto;
-}
-.jobs-center {
-  width: 90vw;
-  margin: 0 auto;
-  max-width: 1170px;
-  display: grid;
-  grid-template-columns: 200px 1fr;
-  column-gap: 4rem;
-}
-.btn-container {
+.question header {
   display: flex;
-  justify-content: center;  
-  margin-bottom: 4rem;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
+  align-items: center;
 }
-.active-btn, .job-btn:hover {
-  color: #2caeba;
-  box-shadow: 0 2px #2caeba;
-}
-.job-btn {
+.btn {
   background: transparent;
   border-color: transparent;
-  text-transform: uppercase;
-  font-size: 1.25rem;
-  letter-spacing: .1rem;
-  margin: 0 .5rem;
-  margin-bottom: 14px;
-  transition: all .3s linear;
-  cursor: pointer;
-  outline-color: #e0fcff;
-}
-.job-info {
-  text-align: left;
-}
-.job-info h3 {
-  font-weight: 400;
-}
-.job-info h4 {
-  text-transform: uppercase;
-  color: #617d98;
-  background: #dae2ec;
-  display: inline-block;
-  padding: .375rem .75rem;
-  border-radius: .25rem;
-}
-.job-date {
-  letter-spacing: .1rem;
-}
-.job-desc {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  grid-column-gap: 2rem;
-  column-gap: 2rem;
+  width: 2rem;
+  height: 2rem;
+  background: #eae6eb;
+  display: flex;
   align-items: center;
-  margin-bottom: 1.25rem;
+  justify-content: center;
+  border-radius: 50%;
+  color: #b4345c;
+  cursor: pointer;
+  margin-left: 1rem;
+  align-self: center;
 }
-.job-desc p {
-  margin-bottom: 0;
+.question p {
   color: #324d67;
-}
-section .btn {
-  text-transform: uppercase;
-  font-weight: 700;
-  border: 2px solid transparent;
-  width: 12rem;
-  text-align: center;
-  margin: 3rem auto 0;
+  margin-bottom: 0;
+  margin-top: .5rem;
 }
