--- a/src/index.css
+++ b/src/index.css
@@ -293,46 +293,64 @@ p {
   }
 }
 
-.container {
-  display: grid;
-  grid-template-columns: 250px 1fr;
-  width: 90vw;
-  margin: 5rem auto;
-  background: #db890e;
-  border-radius: .25rem;
-  padding: 2.5rem 2rem;
-  max-width: 920px;
-  grid-gap: 1rem 2rem;
+.section {
+  padding: 5rem 0;
+  width: 95vw;
+  margin: 0 auto;
 }
-.question {
-  padding: 1rem 1.5rem;
-  border: 2px solid #eae6eb;
-  margin-bottom: 1rem;
-  border-radius: .25rem;
-  box-shadow: 0 5px 15px rgba(0,0,0,.1);
+.title {
+  text-align: center;
+  margin-bottom: 2rem;
 }
-.question header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.underline {
+  width: 5rem;
+  height: .25rem;
+  background: #c59d5f;
+  margin-left: auto;
+  margin-right: auto;
 }
-.btn {
+.filter-btn {
   background: transparent;
   border-color: transparent;
-  width: 2rem;
-  height: 2rem;
-  background: #eae6eb;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  color: #b4345c;
+  font-size: 1rem;
+  text-transform: capitalize;
+  margin: 0 .5rem;
+  letter-spacing: 1px;
+  padding: .375rem .75rem;
+  color: #c59d5f;
   cursor: pointer;
-  margin-left: 1rem;
-  align-self: center;
+  transition: all .3s linear;
+  border-radius: .25rem;
 }
-.question p {
-  color: #324d67;
+.section-center {
+  width: 95vw;
+  grid-template-columns: 1fr 1fr;
+  margin: 0 auto;
+  max-width: 1170px;
+  display: grid;
+  gap: 3rem 2rem;
+  justify-items: center;
+}
+.menu-item {
+  display: grid;
+}
+.photo {
+  object-fit: cover;
+  height: 200px;
+  width: 100%;
+  border: .25rem solid #c59d5f;
+  border-radius: .25rem;
+  display: block;
+}
+.item-info header {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: .5px dotted #617d98;
+}
+.item-info h4 {
+  margin-bottom: .5rem;
+}
+.item-text {
   margin-bottom: 0;
-  margin-top: .5rem;
+  padding-top: 1rem;
 }
